# sententia

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/: launch.json
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/scripts/: generate_starter_prompts.py  index_corpus.py  run_stub.py
backend/src/sententia/: __init__.py  config.py
backend/src/sententia/api/: main.py  routes.py  schemas.py
backend/src/sententia/graph/: build.py  edges.py  nodes.py  state.py
backend/src/sententia/llm/: assess.py  client.py  followups.py  generate.py  relevance.py
backend/src/sententia/retrieval/: corpus.py  hybrid_search.py  index.py
backend/tests/: conftest.py  test_api_chat.py  test_check_relevance.py  test_edges.py  test_graph_assess_llm.py  test_graph_generate_llm.py  test_graph_nodes.py  test_graph_real_search.py  test_graph_stub.py  test_human_review.py  test_llm_assess.py  test_llm_followups.py  test_llm_generate.py  test_llm_generate_stream.py  test_llm_relevance.py  test_retrieval.py
corpus/: README.md
corpus/cases/: al-basry_v_maharaj_2022_nswcatcd_9.txt  atkinson_v_papadakis_2025_nswcatcd_154.txt  dawson_v_gj_investments_2024_nswcatcd_40.txt  dib_v_holstein_2025_nswcatcd_19.txt  elsom_v_coroneos_2016_nswcatcd_47.txt  stewart_v_wang_2024_nswcatcd_70.txt
corpus/legislation/: rta2010_s100_tenant_early_termination.txt  rta2010_s159_163_168_bonds.txt  rta2010_s41_rent_increases.txt  rta2010_s44_excessive_rent.txt  rta2010_s63_65_repairs.txt  (+1 more)
docs/: brief.md
frontend/: README.md  package-lock.json  package.json
(+16 files in other folders)
